@@ -183,6 +183,9 @@ gtk2perl_gdk_event_set_state (GdkEvent * event,
 #if GTK_CHECK_VERSION (2, 8, 0)
 		    case GDK_GRAB_BROKEN:
 #endif
+#if GTK_CHECK_VERSION (2, 13, 1) /* FIXME: 2.14 */
+		    case GDK_DAMAGE:
+#endif
 			/* no state field */
 			break;
 		}
@@ -254,6 +257,9 @@ gtk2perl_gdk_event_set_time (GdkEvent * event,
 		     case GDK_SETTING:
 #if GTK_CHECK_VERSION (2, 8, 0)
 		     case GDK_GRAB_BROKEN:
+#endif
+#if GTK_CHECK_VERSION (2, 13, 1) /* FIXME: 2.14 */
+		    case GDK_DAMAGE:
 #endif
 			/* no time */
 			break;
